ui fixes and adding toggle for visibility of public orders

--- a/App/App.Web/Content/css/garderob.css
+++ b/App/App.Web/Content/css/garderob.css
@@ -440,8 +440,10 @@ i.submit-loading {
 	background-color: #e5e5e5;
 	padding: 5px;
 	color: #4c4c4c;
-	height: 500px;
+	min-height: 500px;
+	height: auto;
 	line-height: 22px;
+	word-wrap: break-word;
 }
 
 .material-wrapper {
